fix clipping of first line of post on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -141,7 +141,7 @@ ul {
 .post-page {
     margin-bottom: 10px;
     .post-header {
-        height: 4em;
+        margin-bottom: 2em;
         ul {
             display: flex;
             float: right;
